--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -267,6 +267,7 @@
     <Compile Include="Reportes\ActivoFijo\ACTF_004_resumen_Bus.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_005_Bus.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_006_Bus.cs" />
+    <Compile Include="Reportes\ActivoFijo\ACTF_007_Bus.cs" />
     <Compile Include="Reportes\Banco\BAN_001_Bus.cs" />
     <Compile Include="Reportes\Banco\BAN_001_cancelaciones_Bus.cs" />
     <Compile Include="Reportes\Banco\BAN_002_Bus.cs" />
