--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -495,6 +495,11 @@
     <Compile Include="SeguridadAcceso\seg_Usuario_x_Empresa_Info.cs" />
     <Compile Include="vwcaj_Caja_Movimiento_por_conciliar_Info.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Core.Erp.Web\Areas\Banco\Views\BancoCuenta\Index.cshtml">
+      <Link>Index.cshtml</Link>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
