--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9866,6 +9866,7 @@
     <Content Include="Areas\Contabilidad\Views\ImportacionDiarios\_CmbCuenta.cshtml" />
     <Content Include="Areas\Reportes\Views\ActivoFijoReportes\ACTF_007.cshtml" />
     <Content Include="Areas\RRHH\Views\ProcesarRol\_CmbCuenta_sueldos.cshtml" />
+    <Content Include="Areas\RRHH\Views\ProcesarRol\_CmbCuenta_prov.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
