--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -1134,6 +1134,12 @@
     <Compile Include="Reportes\RRHH\ROL_002_RolPago.Designer.cs">
       <DependentUpon>ROL_002_RolPago.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\RRHH\ROL_010_Resumen_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\RRHH\ROL_010_Resumen_Rpt.Designer.cs">
+      <DependentUpon>ROL_010_Resumen_Rpt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\RRHH\ROL_019_Rpt.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -10314,6 +10320,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\RRHH\ROL_002_RolPago.resx">
       <DependentUpon>ROL_002_RolPago.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\RRHH\ROL_010_Resumen_Rpt.resx">
+      <DependentUpon>ROL_010_Resumen_Rpt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\RRHH\ROL_019_Rpt.resx">
       <DependentUpon>ROL_019_Rpt.cs</DependentUpon>
